# University-and-Course-data

./: .env.example  .gitattributes  .gitignore  .replit  BATCH_SCRAPE_VALIDATION_REPORT.md  DUAL_STACK_DB_FINDINGS.md  MIGRATION_AUDIT.md  SCRAPING_ACCURACY_PLAN.md  deploy.sh  ecosystem.config.cjs  ecosystem.config.js  pnpm-lock.yaml  pyproject.toml  replit.md  replit.nix
backend-py/: .env.example  .gitignore  Makefile  README.md  celerybeat-schedule  debug_master_research.py  pyproject.toml  requirements.txt  start.sh
backend-py/alembic/: env.py  prod_migration_010_011.sql  prod_migration_015.sql
backend-py/alembic/versions/: 001_add_rejection_reason.py  002_add_extraction_method.py  003_add_requeue_count.py  004_add_requeue_events.py  005_add_claim_count.py  006_add_scrape_warnings.py  007_add_has_central_fee_page.py  008_add_test_accepted_flags.py  009_add_metrics_alerts.py  010_add_cricos_code.py  011_gemini_cost_tracking.py  012_duration_numeric.py  013_discovery_failure_alerts.py  014_scraped_courses_duration_numeric.py  015_courses_missing_columns.py  016_add_scrape_run_summary.py  017_alert_dashboard_views.py  018_cricos_coverage_view.py  019_user_permissions.py
backend-py/app/: config.py  database.py  dependencies.py  main.py  permissions.py
backend-py/app/models/: __init__.py  academic_level_option.py  academic_requirement.py  acronym.py  assessment_note.py  audit.py  bulk_session.py  central_page_cache.py  course.py  discovery_failure_alert.py  english_requirement.py  evidence.py  fee.py  field_approval.py  field_conflict.py  gemini_call_log.py  import_job.py  intake.py  scholarship.py  scrape_feedback.py  scrape_run_alert.py  scrape_run_metrics.py  scrape_run_summary.py  scrape_runtime.py  scraped_course.py  scraping_change.py  scraping_job.py  user.py  (+2 more)
backend-py/baselines/: 20260430_021811_asahe_9.json  20260430_021811_kbs_10.json  20260430_021811_mit_11.json  20260430_021811_study_207.json  20260430_021811_sydneymet_14.json  20260430_021811_torrens_22.json  20260430_021811_torrens_5.json  20260430_021811_uow_13.json  20260430_021811_vit_16.json  20260430_021811_vu_19.json
backend-py/deploy/: README.md  nginx.conf  uni-api-py.service  uni-celery.service
backend-py/docs/: architecture.md  sprint2_backlog.md  uni_onboarding_patterns.md  week4_scale_up_log.md
backend-py/scraper_config/: defaults.yaml
backend-py/scripts/: apply_migration_017.py  apply_migration_018.py  apply_migration_019.py  apply_migration_020.py  audit_null_ielts.py  bond_enrich.py  bulk_approve.py  capture_baseline.py  check_gemini_model.py  cricos_coverage_diagnostic.py  csu_promotion_diagnostic.py  regression_sweep.py  test_zombie_beat.py  verify_db_match.py  week4_cost_projection.sql  week4_per_uni_protocol.sql  week4_preflight.sh  week5_fleet_diagnostics.sql  week5_preflight.sh
backend-py/seed/: dev_universities.json  prod_uni_scrape_config.sql
backend-py/tests/: conftest.py  test_ai_fallback.py  test_app_boot.py  test_assessment_notes.py  test_auto_publish.py  test_bond_static_extract.py  test_browser_fallback_timeout.py  test_browser_international_toggle.py  test_browser_pool_partial_html.py  test_category_classifier.py  test_category_expand.py  test_celery_boot.py  test_completeness.py  test_confidence.py  test_cost_ceiling.py  test_create_university_flow.py  test_cricos_extraction.py  test_csu_static_extract.py  test_csu_url_normalisation.py  test_data_parity_priorities.py  test_data_quality.py  test_degree_level.py  test_discovery_filters.py  test_discovery_regression.py  test_duration.py  test_ecu_static_extract.py  test_english_test_table_layouts.py  test_english_test_verbose_gemini.py  test_extractors.py  test_fee.py  test_flinders_fixes.py  test_gemini_gate.py  test_guards.py  test_history_one_requeue.py  test_home_page_redirect.py  test_ielts_edge_cases.py  test_import_excel.py  test_intake.py  test_location.py  test_log_level_inference.py  (+42 more)
(+1253 files in other folders)
