[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "beautifulsoup4>=4.12.0",
    "celery[redis]>=5.4.0",
    "email-validator>=2.0",
    "fastapi>=0.115.0",
    "google-generativeai>=0.7.0",
    "gunicorn>=22.0.0",
    "httpx>=0.27.0",
    "lxml>=5.2.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pypdf>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "rapidfuzz>=3.9.0",
    "redis>=5.0.0",
    "selectolax>=0.3.21",
    "sqlalchemy[asyncio]>=2.0.30",
    "uvicorn[standard]>=0.30.0",
]
