[project]
name = "university-portal-backend"
version = "0.1.0"
description = "Python backend for University Portal (FastAPI + SQLAlchemy + Celery)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "selectolax>=0.3.21",
    "pypdf>=4.2.0",
    "pypdfium2>=4.30.0",
    "Pillow>=10.3.0",
    "google-genai>=1.0.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "rapidfuzz>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
scraper = [
    "playwright>=1.44.0",
    "pdfplumber>=0.11.0",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Share a single asyncio event loop across all tests in the session.
# Without this, pytest-asyncio creates a new event loop per test function,
# but asyncpg's connection pool binds its connections to the first loop it
# sees.  Subsequent tests get "Future attached to a different loop" errors
# when the pool tries to recycle those connections.  session scope fixes it.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
# Skip integration tests (real Playwright/network) by default.
# Run them explicitly with: pytest -m integration
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests that require real network access and a running Playwright browser (deselect with '-m not integration')",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "deploy*", "tests*", "scripts*"]
